# LancasterAQ

./: .gitignore  MANIFEST.in  README.md  environment.yml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  config.yml
.github/workflows/: workflow-master.yml
examples/: basic.py  data_types.ipynb  introduction.ipynb  ipynb_requirements.txt  save_as_json.py
src/LancasterAQ/: __init__.py  __main__.py
src/LancasterAQ/data/: __init__.py  data_class.py  data_object.py
src/LancasterAQ/readwrite/: __init__.py  gpickle.py
src/LancasterAQ/util/: __init__.py
tests/: test_standard.py
