[metadata]
name = LancasterAQ
author = Lily Gouldsbrough
author_email = l.gouldsbrough@lancaster.ac.uk
version = 0.0.5.9
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
url = https://github.com/lgouldsbrough/LancasterAQ
license = LICENSE
description=Python package developed for the Lancaster Air Quality project

[options]
python_requires = >=3.9
install_requires =
    numpy
    pandas
    networkx
    shapely
    scipy
packages = find:
package_dir =
    = src
;include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    isort
    pylint
    flake8
    pytest
examples =
    seaborn
    matplotlib
    watermark

[options.package_data]
LancasterAQ =
    data/lancaster.gpickle
    data/processed_data.csv

[options.entry_points]
console_scripts =
    LancasterAQ = LancasterAQ.__main__:main

